k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technical-training
  labels:
    app: technical-training
spec:
  selector:
    app: technical-training
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
